@@ -399,6 +399,8 @@ Core
    CONNECTED_LINE_SEND_SUB_ARGS.  For CCSS, use cc_callback_sub instead of
    cc_callback_macro in channel configurations.
 
+ * Asterisk can now use a system-provided NetBSD editline library (libedit) if it
+   is available.
 
 AGI
 ------------------
